[package]
name = "perch"
version = "0.2.0"
authors = ["thsowers <thsowers@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
# tantivy = "0.10.2"
regex = "1"
tantivy = { git = "https://github.com/tantivy-search/tantivy", branch="hotfix-656" }


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "search_benchmark"
harness = false

[profile.release]
lto = true